[project]
name = "linkbay-auth"
version = "0.2.0"
description = "Sistema di autenticazione JWT per FastAPI - Production-ready con sicurezza avanzata"
authors = [
    {name = "Alessio Quagliara", email = "quagliara.alessio@gmail.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "pydantic[email]>=2.0.0",
    "email-validator>=2.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"